--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
                             <li><a class="hvr-pulse" href="https://www.linkedin.com/in/nikkigarcia1204" target="_blank" >Link Up</a></li>
                             <li><a class="hvr-pulse"  href="mailto:nikkigarcia1204@gmail.com" target="_blank">Talk To Me</a></li>
                         </div>
-                        
-                        <li style="float:right; margin-right: 20px;" > <a class="active" class="hvr-pulse" href="index.html"><img src="../images/NG-logo.png" height="60px"></a>
+                        <div class="logo">
+                        <li style="float:right; margin-right: 20px;">
+                             <a class="active" class="hvr-pulse" href="index.html"><img src="../images/NG-logo.png" height="60px"></a>
+                        </div>
                         </li>
                     </ul>
                 </div>
@@ -43,7 +45,7 @@
             <div class="left">
                 <div class="howdy">
                     
-                    <h1><img src="../images/howdy.png" height="140px;"></h1>
+                    <h1><img class="howdyimg" src="../images/howdy.png" height="140px;"></h1>
                     <!--<img src="images/Elements/Element_7.png" width="500px" padding-bottom="200px">-->
                     <p>I’m Nikki Garcia, a UX/UI Designer from Houston, Texas, working and
                             living in San Francisco. </p>
