added works page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
                 <div class="block_element">
                      <ul>
                         <div>
-                            <li><a class="hvr-pulse" href="https://nikkigarcia.myportfolio.com/">Some Works</a></li>
+                            <li>
+                                <a class="hvr-pulse" href="works.html">
+                                    <span class="text">Some Works</span>
+                                    
+
+                                </a>
+                            </li>
                             <li><a class="hvr-pulse" href="https://www.linkedin.com/in/nikkigarcia1204" target="_blank" >Link Up</a></li>
                             <li><a class="hvr-pulse"  href="mailto:nikkigarcia1204@gmail.com" target="_blank">Talk To Me</a></li>
                         </div>
