--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
     </style>
 
-    <script src="javascript.js"></script>
+
 
 </head>
 
@@ -40,7 +40,7 @@
                         </div>
                         <div class="logo">
                         <li style="float:right; margin-right: 20px;">
-                             <a class="active" class="hvr-pulse" href="index.html"><img src="../images/NG-logo.png" height="60px"></a>
+                             <a class="active" class="hvr-pulse" href="index.html"><img src="../hw17-portfolio/images/ng-logo3.png" height="60px"></a>
                         </div>
                         </li>
                     </ul>
