--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="left">
                 <div class="howdy">
                     
-                    <h1><img class="howdyimg" src="../images/howdy.png" height="140px;"></h1>
+                    <h1><img class="howdyimg" src="images/howdy.png" height="140px;"></h1>
                     <!--<img src="images/Elements/Element_7.png" width="500px" padding-bottom="200px">-->
                     <p>I’m Nikki Garcia, a UX/UI Designer from Houston, Texas, working and
                             living in San Francisco. </p>
@@ -69,7 +69,7 @@
                 <div class="gridChild arrow">
                     <a class="scroll-link" href="#content">
                            <p class="memymyself" text-decoration="none">Me, Myself, & I</p>
-                        <img src="../images/arrow-2.png" height="50px">
+                        <img src="images/arrow-2.png" height="50px">
                     </a>    
                 </div>
             
