works featured edits

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <html>
     <body>
         <div class="page">
-        <div class="background"></div>
+        <div class="background"></div><!--Background image -->
         <div class="outer-div">
         
 
